esto ahora tiene una imagen que corresponde totalmente con la tematica de la pagina

--- a/cvcristian.html
+++ b/cvcristian.html
@@ -3,12 +3,14 @@
 <head>
 	<title>CV Cristian</title>
 </head>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
 <b> CV Cristian Fernandez Cabre </b></br>
-<table>
+<table class='w3-table-all w3-hoverable'>
 	<tr>
 		<th><b>Nombre: </b></th>
 		<th>Cristian Fernández Cabré</th>
+		<img src="G:\Descargas\porschewallpaper.jpg">
 	</tr>
 	<tr>
 		<th><b>Dirección: </b></th>
