no se que estoy haciendo

--- a/cvcristian.html
+++ b/cvcristian.html
@@ -10,11 +10,12 @@
 	<tr>
 		<th><b>Nombre: </b></th>
 		<th>Cristian Fernández Cabré</th>
-		<img src="G:\Descargas\porschewallpaper.jpg">
+		<th><img src="G:\Descargas\porschewallpaper.jpg" width="256px" height="144px"></th>
 	</tr>
 	<tr>
 		<th><b>Dirección: </b></th>
 		<th>Carrer Buguenvil·lea n2 p1 3</th>
+		<th></th>
 	</tr>
 
 
