--- a/cvcristian.html
+++ b/cvcristian.html
@@ -17,6 +17,11 @@
 		<th>Carrer Buguenvil·lea n2 p1 3</th>
 		<th></th>
 	</tr>
+	<tr>
+		<th><b>Fecha de nacimiento: </b></th>
+		<th>27/10/1996</th>
+		<th></th>
+	</tr>
 
 
 
