--- a/cvcristian.html
+++ b/cvcristian.html
@@ -22,6 +22,11 @@
 		<th>27/10/1996</th>
 		<th></th>
 	</tr>
+	<tr>
+		<th>Estudios: </th>
+		<th></th>
+		<th>Universidad de la calle</th>
+	</tr>
 
 
 
