cambio de porsche a monkaS esta vez de verdad

--- a/cvcristian.html
+++ b/cvcristian.html
@@ -10,7 +10,7 @@
 	<tr>
 		<th><b>Nombre: </b></th>
 		<th>Cristian Fernández Cabré</th>
-		<th><img src="G:\Descargas\porschewallpaper.jpg" width="256px" height="144px"></th>
+		<th><img src="G:\Descargas\monkaS.png"></th>
 	</tr>
 	<tr>
 		<th><b>Dirección: </b></th>
